added some snippets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/navbar-logo.svg" 
+                    alt="landscape view of salford quays with a blue to white gradient layered upon" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -70,9 +71,7 @@
                 </div>
             </div>
         </section>
-        <!-- Page Content One Column Snippet -->
-    <div class="container mt-5">
-
+ 
 
   
     <hr>
@@ -94,7 +93,8 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/dark-club-photo-cropped.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/dark-club-photo-cropped.jpg" 
+                                alt="A group of people dancing on the dancefloor of a club with blue beam lights lighting the dancefloor from the ceiling"/>
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">CLUBS</div>
@@ -109,7 +109,8 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/bar-photo-cropped.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/bar-photo-cropped.jpg" 
+                                alt="Back of the bar with glasses and bottles of alcohol. Two tills at the back of the bar next to some beer taps" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">BARS</div>
@@ -124,7 +125,8 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/food-photo-three.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/food-photo-three.jpg" 
+                                alt="pancakes with three slices of oranges on top and four blueberries. a pot next to the plate of pancakes containing several blueberries. pieces of chocolate and coca bean scattered across the table" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">FOOD</div>
@@ -139,7 +141,8 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/tram-photo.gif" alt="..." />
+                                <img class="img-fluid" src="assets/img/tram-photo.gif" 
+                                alt="a tram in the middle of the photo which is going to manchester airport with a blue to grey gradient layed upom the photo" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">ABOUT</div>
