--- a/page-one.html
+++ b/page-one.html
@@ -117,44 +117,28 @@
           </div>
         </div>
         <!-- /.row -->
-
-        <div class="container mt=5"></div>
-        <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
-        <!-- Portfolio item 6 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Window
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Photography
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close Project
-                                    </button>
-                                </div>
-                            </div>
+              <!-- Services-->
+              <section class="page-section" id="services">
+                <div class="container">
+                    <div class="text-center"> 
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-3">
+                            <a class="btn btn-primary btn-xl text-uppercase" href="index.html".html>Home</a>              
+                        </div>
+                        <div class="col-md-3">
+                             <a class="btn btn-primary btn-xl text-uppercase" href="page-two.html">Bars</a> 
+                        </div>
+                        <div class="col-md-3">                     
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-three.html">Food</a> 
+                        </div>
+                        <div class="col-md-3">      
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-four.html">About</a>              
+                            </div>    
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
