Added navigation at the bottom of every page

--- a/page-two.html
+++ b/page-two.html
@@ -94,41 +94,29 @@
 <div class="container mt-5">
     <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
 </div>
-        <!-- Team-->
-        <section class="page-section bg-light" id="team">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
-                        </div>
+        <!-- /.row -->
+              <!-- Services-->
+              <section class="page-section" id="services">
+                <div class="container">
+                    <div class="text-center"> 
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
+                    <div class="row text-center">
+                        <div class="col-md-3">
+                            <a class="btn btn-primary btn-xl text-uppercase" href="index.html".html>Home</a>              
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
+                        <div class="col-md-3">
+                             <a class="btn btn-primary btn-xl text-uppercase" href="page-one.html">Clubs</a> 
+                        </div>
+                        <div class="col-md-3">                     
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-three.html">Food</a> 
+                        </div>
+                        <div class="col-md-3">      
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-four.html">About</a>              
+                            </div>    
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
-            </div>
-        </section>
+            </section>
 
         <!-- Footer-->
         <footer class="footer py-4">
