--- a/page-four.html
+++ b/page-four.html
@@ -47,26 +47,6 @@
                 <div class="masthead-heading text-uppercase">About</div>
             </div>
         </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">In-Page Navigation</h2>               
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>              
-                    </div>
-                    <div class="col-md-4">
-                         <a class="btn btn-primary btn-xl text-uppercase" href="#about">Timeline</a> 
-                    </div>
-                    <div class="col-md-4">                     
-                        <a class="btn btn-primary btn-xl text-uppercase" href="#team">Team</a> 
-                    </div>
-                </div>
-            </div>
-        </section>
 <!-- Article Title -->
 <div class="container mt-5">
     <div class="row">
@@ -176,42 +156,29 @@
                 </ul>
             </div>
         </section>
-        <!-- Team-->
-        <section class="page-section bg-light" id="team">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
-                        </div>
+                <!-- /.row -->
+              <!-- Services-->
+              <section class="page-section" id="services">
+                <div class="container">
+                    <div class="text-center"> 
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
+                    <div class="row text-center">
+                        <div class="col-md-3">
+                            <a class="btn btn-primary btn-xl text-uppercase" href="index.html".html>Home</a>              
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Title</h4>
-                            <p class="text-muted">Text</p>
+                        <div class="col-md-3">
+                             <a class="btn btn-primary btn-xl text-uppercase" href="page-ome.html">Clubs</a> 
+                        </div>
+                        <div class="col-md-3">                     
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-two.html">Bars</a> 
+                        </div>
+                        <div class="col-md-3">      
+                            <a class="btn btn-primary btn-xl text-uppercase" href="page-three.html">Food</a>              
+                            </div>    
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
-            </div>
-        </section>
-
+            </section>
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
