--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>The Life Guide - Manchester</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -184,7 +184,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Clubs</h2>
-                                    <p class="item-intro text-muted">A brand new nightclub in the heart of Manchester!</p>
+                                    <p class="item-intro text-muted">There's no shortage of memorable night outs in Manchester</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definetly one to add to yout next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
                                     <ul class="list-inline">
