--- a/page-two.html
+++ b/page-two.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>The Life Guide - Manchester</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -92,7 +92,9 @@
 </div>
 
 <div class="container mt-5">
-    <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
+    <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+    src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black" title="Featured Bar Of The Week"></iframe><br/>
+    <small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
 </div>
         <!-- /.row -->
               <!-- Services-->
