--- a/page-three.html
+++ b/page-three.html
@@ -77,14 +77,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
           </div>
         </div>
-        <!-- /.row -->
-  
-        <hr>
-    <hr>
-  
-      </div>
-      <!-- /.container -->
-      
+       
  <!-- START THE FEATURETTES -->
  <div class="container mt-5">
     <hr class="featurette-divider">
@@ -147,6 +140,7 @@
         </footer>
 
         <!-- Bootstrap core JS-->
+        <script async src="http://www.instagram.com/embed.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
