Changed the format of the first page

--- a/page-one.html
+++ b/page-one.html
@@ -80,42 +80,20 @@
   
         <hr>
   
-        <!-- Project Three -->
-        <div class="row">
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
-          </div>
-          <div class="col-md-5">
-            <h3>Chinawhite Manchester</h3>
-            <p>Since opening its doors,  Chinawhite has maintained its reputation for offering a unique experience to its cohort of members, friends and celebrity client’s. for nearly two decades the venue has been delighting guests. With its stylish and exotic interiors, superior service and regular performances from the world’s most famous dj’s and artists. Chinawhite’s guests can look forward to regular performances by some of the world’s most famous international DJ’s and artists. Recent artists have included: Drake, Jason Derulo, Pusha T, Bow Wow and Nelly to name just a few.  With the brands long standing relationship with VIP guests and celebrities - you never know who you will find partying at Chinawhite. Recent attendees have included the likes of: Leonardo Dicaprio, Kate Moss, Tom Cruise and many more. </p>
-          </div>
+        <!-- START THE FEATURETTES -->
+    <div class="container mt-5">
+      <hr class="featurette-divider">
+      <h2 class="my-4">Featured Club Of The Month</h2>
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading"><span class="text-muted">Vision Nightclub </span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Four -->
-        <div class="row">
-          <div class="col-md-12">
-            <h3>42nd Street</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto" src="https://source.unsplash.com/RCAhiGJsUUE/500x500" alt="Generic placeholder image">
         </div>
-        <!-- /.row -->
-  
-        <hr>
-  
-        <!-- Project Five -->
-        <div class="row">
-  
-          <div class="col-md-5">
-            <h3>Box Five has an image to the right</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          </div>
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
-          </div>
-        </div>
+      </div>
+      <!-- /END THE FEATURETTES -->
         <!-- /.row -->
               <!-- Services-->
               <section class="page-section" id="services">
