Added text to first page

--- a/page-one.html
+++ b/page-one.html
@@ -87,7 +87,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading"><span class="text-muted">Vision Nightclub </span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definetly one to add to yout next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto" src="https://source.unsplash.com/RCAhiGJsUUE/500x500" alt="Generic placeholder image">
