Changing the navigation bar

--- a/page-one.html
+++ b/page-one.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-one.html"><u>Clubs</u></a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
