--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html"><u>Home</u></a></li>
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
