--- a/page-four.html
+++ b/page-four.html
@@ -36,7 +36,7 @@
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-four.html"><u>About</u></a></li>
                     </ul>
                 </div>
             </div>
