--- a/page-two.html
+++ b/page-two.html
@@ -34,7 +34,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-one.html">Clubs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="page-two.html">Bars</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-two.html"><u>Bars</u></a></li>
                         <li class="nav-item"><a class="nav-link" href="page-three.html">Food</a></li>
                         <li class="nav-item"><a class="nav-link" href="page-four.html">About</a></li>
                     </ul>
