--- a/page-one.html
+++ b/page-one.html
@@ -58,12 +58,12 @@
   
         <!-- Project One -->
         <div class="row">
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
+          <div class="col-md-6">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/vision-photo.jpg" alt="">
           </div>
           <div class="col-md-5">
             <h3>Vision Nightclub</h3>
-            <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definetly one to add to yout next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
+            <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definitely one to add to your next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
           </div>
         </div>
         <!-- /.row -->
@@ -79,7 +79,7 @@
         </div>
         <!-- /.row -->
   
-        <hr>
+
   
         <!-- START THE FEATURETTES -->
     <div class="container mt-5">
@@ -87,11 +87,11 @@
       <h2 class="my-4">Featured Club Of The Month</h2>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading"><span class="text-muted">Vision Nightclub </span></h2>
-          <p class="lead">Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definetly one to add to yout next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
+          <h2 class="featurette-heading"><span class="text-muted">Ark Deansgate </span></h2>
+          <p class="lead"></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" src="https://source.unsplash.com/RCAhiGJsUUE/500x500" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid mx-auto" src="assets/img/ark-photo.jpg" alt="">
         </div>
       </div>
       <!-- /END THE FEATURETTES -->
