--- a/page-three.html
+++ b/page-three.html
@@ -57,17 +57,17 @@
           <small>One Column</small>
         </h1>
   
-        <!-- Project One -->
+      <!-- Project One -->
         <div class="row">
-          <div class="col-md-7">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="https://via.placeholder.com/700x300" alt="">
+          <div class="col-md-6">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/tiffin-room-photo.jpg" alt="">
           </div>
           <div class="col-md-5">
             <h3>Box One</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
           </div>
         </div>
-        <!-- /.row -->
+        <!-- /.row -->  
   
         <hr>
   
