Adding final writing and touches

--- a/page-one.html
+++ b/page-one.html
@@ -59,11 +59,11 @@
         <!-- Project One -->
         <div class="row">
           <div class="col-md-6">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/vision-photo.jpg" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="assets/img/vision-photo.jpg" alt="Photo of the oustide of Vision Nightclub">
           </div>
           <div class="col-md-5">
             <h3>Vision Nightclub</h3>
-            <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definitely one to add to your next weekends adventures. The music in the club ranges from DnB events, house, rap, rnb and much more so whatever music your into, Vision will provide a solid night of entertainment.</p>
+            <p>Vision, formerly known as 'Playground', has opened it's doors recently bringing a new wave of enjoyment for your next few weekends. With the club being located within walking distance from Oxford Road train station and just a few minutes away from Deansgate, this club is definitely one to add to your next weekends adventures.</p>
           </div>
         </div>
         <!-- /.row -->
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-md-12">
             <h3>Revolution Deansgate</h3>
-            <p>Enjoy delectable meals and artisan beverages on their outdoor sun deck before heading downstairs to a crowded dance floor until late. We can assure you that at Revolution Deansgate Locks, the excitement never ends. If you were seeking for cocktail bars in Manchester, Revolution is the place to be, as it frequently hosts Manchester's best nights out. You won't want to leave when the night is young thanks to their amazing drink selection, nonstop music, and other amenities. Gather your group of friends, shine your dancing shoes, and get ready for one of the best nights of your lives..</p>
+            <p>Enjoy artisan beverages on their outdoor sun deck before heading downstairs to a crowded dance floor until late. We can assure you that at Revolution Deansgate Locks, the excitement never ends. If you were seeking student filled excitment, Revolution Deansgate is the place to be, as it frequently hosts Manchester's best nights out. You won't want to leave when the night is young thanks to their amazing drink selection and nonstop music . Gather your group of friends, shine your dancing shoes, and get ready for one of the best nights of your lives.</p>
           </div>
         </div>
         <!-- /.row -->
@@ -88,12 +88,16 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading"><span class="text-muted">Ark Deansgate </span></h2>
-          <p class="lead"></p>
+          <p class="lead">With events running from nearly every day of the week, Ark Deansgate is at the top of our list for this month. With having 3 different floors of non-stop bangers, there is a guarantee that people with a wide range of music tastes will have an entertaining night. Ark is located within the Deansgate locks which is a close destination for students, being just a 10 minute walk from most accommodations. </p>
+        <p>Get a feel for the music ↓</p> 
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" src="assets/img/ark-photo.jpg" alt="">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1280781442&color=%231111ba&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/djbucanas" title="🎷EL_ BUCANAS_DJ 🎷" target="_blank" style="color: #cccccc; text-decoration: none;">🎷EL_ BUCANAS_DJ 🎷</a> · <a href="https://soundcloud.com/djbucanas/dj-bucanasafter-hoursrap-hip-hoptwerking-live-mix" title="DJ Bucanas(After Hours)Rap ,Hip-Hop,Twerk (LIVE MIX)" target="_blank" style="color: #cccccc; text-decoration: none;">DJ Bucanas(After Hours)Rap ,Hip-Hop,Twerk (LIVE MIX)</a></div>
         </div>
       </div>
+
+
+
+  
       <!-- /END THE FEATURETTES -->
         <!-- /.row -->
               <!-- Services-->
@@ -118,6 +122,7 @@
                     </div>
                 </div>
             </section>
+            
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
