--- a/page-two.html
+++ b/page-two.html
@@ -51,14 +51,14 @@
        <!-- START THE FEATURETTES -->
     <div class="container mt-5">
         <hr class="featurette-divider">
-        <h2 class="my-4">Featurette</h2>
+        <h2 class="my-4">Bars around manchester</h2>
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> <span class="text-muted"><u>Courtyard</u></span></h2>
+            <p class="lead">Courtyard is dubbed as ‘the best beer garden in Manchester’ which is a bold but fair statement. With a outdoor seating capacity of 250+ people with outdoor heating, this is the ultimate spot for pre drinks before heading out. The prices are some of the best seen in town, with cocktails and beers starting at £2.70. </p>
           </div>
           <div class="col-md-4">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/courtyard-photo.jpg" alt="">
+            <img class="featurette-image img-fluid mx-auto" src="assets/img/courtyard-photo.jpg" alt="Photo of the oustide of Courtyard Bar">
           </div>
         </div>
 
@@ -66,11 +66,11 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> <span class="text-muted"><u>Dogbowl ballroom</u></span></h2>
+            <p class="lead">Dog bowl is a ‘New York style bowling alley’ with a unique bar and kitchen. With their collaborations with NQ64 and Kong’s diner, you can enjoy a relaxed time having a few drinks whilst playing arcade games with top of the range burgers from Kong’s. Prices start at £15 for a burger, beer and lane at the bowling alley with prices getting cheaper or more expensive depending on the drinks and food ordered. </p>
           </div>
           <div class="col-md-4 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/dogbowl-photo.jpg" alt="">
+            <img class="featurette-image img-fluid mx-auto" src="assets/img/dogbowl-photo.jpg" alt="Photo of the oustide of DogBowl Ballroom">
           </div>
         </div>
 
@@ -78,11 +78,11 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"> <span class="text-muted"><u>Revolution Oxford Road</u></span></h2>
+            <p class="lead">This will be one of the first bar’s you notice when starting at the Manchester universities. With it being located on the same road as MMU and UoM, this is another student favourite. Prices are steeper than its close neighbour, courtyard, but the extra price is worth the quality. Had a long day of university lectures and need some good music, food and vibes? Revolution Oxford Road is a must. </p>
           </div>
           <div class="col-md-4">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/revs-oxford-road.jpg" alt="">
+            <img class="featurette-image img-fluid mx-auto" src="assets/img/revs-oxford-road.jpg" alt="Photo of the oustide of Revolution Bar Oxford Road">
           </div>
         </div>
 
@@ -93,9 +93,9 @@
 </div>
 
 <div class="container mt-5">
-    <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-    src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2526156902313237%2C53.473364010076025%2C-2.246768474578858%2C53.475806494842494&amp;layer=mapnik&amp;marker=53.47458527003199%2C-2.2496920824050903" style="border: 1px solid black" title="Featured Bar Of The Week"></iframe><br/>
-    <small><a href="https://www.openstreetmap.org/?mlat=53.47459&amp;mlon=-2.24969#map=18/53.47459/-2.24969">View Larger Map</a></small>
+    <iframe width="1300" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+    src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2538495063781743%2C53.46872449832435%2C-2.230460643768311%2C53.47849466196399&amp;layer=mapnik&amp;marker=53.473616247038244%2C-2.2421765327453613" 
+    style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.4736&amp;mlon=-2.2422#map=16/53.4736/-2.2422">View Larger Map</a></small>
 </div>
         <!-- /.row -->
               <!-- Services-->
@@ -125,15 +125,15 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Karan Chawla 2022</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none me-3" href="#!"></a>
+                        <a class="link-dark text-decoration-none" href="#!"></a>
                     </div>
                 </div>
             </div>
